task10_2dd/k8s/customer-service.yaml
# week05/k8s/customer-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-w05-aks
  labels:
    app: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      imagePullSecrets:
      - name: acr-authentication
      containers:
      - name: customer-service-container
        image: mcnweek10acr.azurecr.io/week05_example01_customer_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service-w05-aks
  labels:
    app: customer-service
spec:
  selector:
    app: customer-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8000
  type: ClusterIP
