task10_2dd/k8s/frontend.yaml
# week05/k8s/frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-w05-aks
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: acr-authentication
      containers:
      - name: frontend-container
        image: mcnweek10acr.azurecr.io/week05_example01_frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-w05-aks
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
