task10_2dd/k8s/order-service.yaml
# week05/k8s/order-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-w05-aks
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      imagePullSecrets:
      - name: acr-authentication
      containers:
      - name: order-service-container
        image: mcnweek10acr.azurecr.io/week05_example01_order_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-w05-aks
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
  type: ClusterIP
