task10_2dd/k8s/product-service.yaml
# week05/k8s/product-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-w05-aks
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      imagePullSecrets:
      - name: acr-authentication
      containers:
      - name: product-service-container
        image: mcnweek10acr.azurecr.io/week05_example01_product_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-w05-aks
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
